# distill-agent

./: .env.example  .gitignore  AWARD_C_SUBMISSION.md  CLAUDE.md  LICENSE  Procfile  README.md  clean.csv  patch_script.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: binning.md  duplicates.md  feature_engineering.md  format.md  missingness.md  orchestrator.md  outlier.md  profiler.md  scaling.md
.claude/commands/: clean.md
.claude/skills/distill/: SKILL.md
assets/: README.md  ui_preview.html
assets/sample_outputs/: clean_head.csv  clean_script.py  decisions.json  report.md
distill/: __init__.py  _pdcompat.py  action_labels.py  binning.py  cli.py  companions.py  duplicates.py  encoding.py  flowchart.py  format.py  io.py  missingness.py  outliers.py  outputs.py  pipeline.py  profiler.py  report.py  scaling.py  script_gen.py  state.py  types.py
docs/: ARCHITECTURE.md  SKILL_USAGE.md  UNSTRUCTURED_DATA.md
examples/: README.md  adult_sample.csv  fetch_adult.py  model_from_session.py  quick_demo.py
tests/: test_core.py  test_format.py  test_missingness.py  test_profiler.py
web/: README.md  __init__.py
web/backend/: __init__.py  app.py  ingest.py  llm.py  sessions.py
web/frontend/: index.html
